docs: update demo002_mall README with actual tech stack and TODO items